--- a/Views/Account/Collections.cshtml
+++ b/Views/Account/Collections.cshtml
@@ -19,30 +19,43 @@
                     <table class="table table-striped table-bordered table-hover" id="dataTables-example">
                         <thead>
                             <tr>
+                                <th>Image</th>
                                 <th>Category</th>
                                 <th>Products</th>
                                 <th>Product Conditions</th>
-                                <th>Status</th>
                             </tr>
                         </thead>
                         <tbody>
                             @foreach (var category in Model)
                             {
                                 <tr>
+                                    <td> 
+                                        @if (!string.IsNullOrEmpty(category.CategoryImg))
+                                        {
+                                            // Split the concatenated Base64 string
+                                            var base64Images = category.CategoryImg.Split('|');
+
+                                            foreach (var base64Image in base64Images)
+                                            {
+                                                if (!string.IsNullOrEmpty(base64Image))
+                                                {
+                                                    <img src="data:image/png;base64,@base64Image" alt="Category Image" style="width:100px;height:50px;margin-right: 5px;" />
+                                                }
+                                            }
+                                        }
+                                        else
+                                        {
+                                            <span>No Image</span>
+                                        }
+                                    </td>
                                     <td>@category.Category</td>
                                     <td>@category.Products</td>
                                     <td>@Html.Raw(@category.ProoductConditions)</td>
-                                    <td>
-                                        <label class="switch">
-                                            <input type="checkbox" id="toggleStatus" @(category.IsActive ? "checked" : "") onclick="toggleStatus(this)" />
-                                            <span class="slider round"></span>
-                                        </label>
-                                    </td>
-
                                 </tr>
                             }
                         </tbody>
                     </table>
+
                 </div>
             </div>
             <!-- /.panel-body -->
