--- a/Views/Account/HotDeals.cshtml
+++ b/Views/Account/HotDeals.cshtml
@@ -4,7 +4,7 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1 class="page-header">Products</h1>
+<h1 class="page-header">Hot Deals</h1>
 
 <div class="row">
     <div class="col-lg-12">
@@ -19,48 +19,62 @@
                     <table class="table table-striped table-bordered table-hover productTable" id="dataTables-example">
                         <thead>
                             <tr>
+                                <th>Images</th>
                                 <th>Category</th>
                                 <th>Name</th>
                                 <th>SKU</th>
                                 <th>Type</th>
                                 <th>Sales Description</th>
                                 <th>Sales Price</th>
+                                <th>Discount Price</th>
                                 <th>Cost</th>
                                 <th>Qty On Hand</th>
                                 <th>ReOrder Point</th>
                                 <th>Status</th>
-                                <th>Action</th>
                             </tr>
                         </thead>
                         <tbody>
                             @foreach (var category in Model)
                             {
-                                <tr> 
-                                    
+                                <tr>
+                                    <td>
+                                        @if (!string.IsNullOrEmpty(category.Images))
+                                        {
+                                            // Split the concatenated Base64 string
+                                            var base64Images = category.Images.Split('|');
+
+                                            foreach (var base64Image in base64Images)
+                                            {
+                                                if (!string.IsNullOrEmpty(base64Image))
+                                                {
+                                                    <img src="data:image/png;base64,@base64Image" alt="Category Image" style="width:100px;height:50px;margin-right: 5px;" />
+                                                }
+                                            }
+                                        }
+                                        else
+                                        {
+                                            <span>No Image</span>
+                                        }
+                                    </td>
                                     <td>@category.ParentRefName</td>
                                     <td>@category.Name</td>
                                     <td>@category.Name</td>
                                     <td>@category.Type</td>
                                     <td>@category.Description</td>
                                     <td>@category.UnitPrice</td>
+                                    <td>@category.DiscountPrice</td>
                                     <td>@category.PurchaseCost</td>
                                     <td>@category.QtyOnHand</td>
                                     <td>@category.ReorderPoint</td>
                                     <td>
                                         <label class="switch">
-                                            <input type="checkbox" id="toggleStatus" @(category.Active == "true" ? "checked" : "") onclick="toggleStatus(this)" />
+                                            <input type="checkbox" id="toggleStatus_@category.Id" onchange="handleCheckboxChange(this, '@category.Id', @category.DiscountPrice)"
+                                            @(category.Active == "true" ? "checked" : "") />
                                             <span class="slider round"></span>
                                         </label>
                                     </td>
-                                    <td>
-                                        <a href="" class="btn-default">
-                                            Edit
-
-                                        </a>
-                                    </td>
                                 </tr>
                             }
-                            .
                         </tbody>
                     </table>
                 </div>
