--- a/Views/Account/Products.cshtml
+++ b/Views/Account/Products.cshtml
@@ -10,7 +10,7 @@
     <div class="col-lg-12">
         <div class="panel panel-default">
             <div class="panel-heading">
-                <a type="button" class="btn btn-primary" asp-controller="Account" asp-action="CreateProduct">Create Products</a>
+                @* <a type="button" class="btn btn-primary" asp-controller="Account" asp-action="CreateProduct">Create Products</a> *@
                 <a type="button" class="btn btn-primary" asp-controller="Account" asp-action="ExportProducts">Export Products</a>
                 <a type="button" class="btn btn-primary" asp-controller="Account" asp-action="PrintPreview">Print Products</a>
             </div>
@@ -19,7 +19,8 @@
                 <div class="table-responsive">
                     <table class="table table-striped table-bordered table-hover productTable" id="dataTables-example">
                         <thead>
-                            <tr>
+                            <tr
+                                <th>Images</th>
                                 <th>Category</th>
                                 <th>Name</th>
                                 <th>SKU</th>
@@ -35,11 +36,30 @@
                             @foreach (var category in Model)
                             {
                                 <tr>
+                                    <td>
+                                        @if (!string.IsNullOrEmpty(category.Images))
+                                        {
+                                            // Split the concatenated Base64 string
+                                            var base64Images = category.Images.Split('|');
+
+                                            foreach (var base64Image in base64Images)
+                                            {
+                                                if (!string.IsNullOrEmpty(base64Image))
+                                                {
+                                                    <img src="data:image/png;base64,@base64Image" alt="Category Image" style="width:100px;height:50px;margin-right: 5px;" />
+                                                }
+                                            }
+                                        }
+                                        else
+                                        {
+                                            <span>No Image</span>
+                                        }
+                                    </td>
                                     <td>@category.ParentRefName</td>
                                     <td>@category.Name</td>
                                     <td>@category.Name</td>
                                     <td>@category.Type</td>
-                                    <td>@category.Description</td>
+                                    <td>@Html.Raw(category.Description)</td>
                                     <td>@category.UnitPrice</td>
                                     <td>@category.PurchaseCost</td>
                                     <td>@category.QtyOnHand</td>
